# gallery_preparator

./: .gitignore  BUGREPORTS  INSTALL  LICENSE.md  MANIFEST.in  README.md  TODO  TRANSLATION  core.py  gallery_preparator.py  requirements.txt  setup.cfg  setup.py
gallery_preparator/: core.py
gallery_preparator/locales/cs_CZ/LC_MESSAGES/: messages.po
gallery_preparator/ui/: console.py
locales/: messages.pot
locales/cs_CZ/LC_MESSAGES/: messages.mo  messages.po
src/gallery_preparator/: core.py  gallery_preparator.py  gallery_preparator_console.py
src/gallery_preparator/locales/: messages.pot
src/gallery_preparator/locales/cs_CZ/LC_MESSAGES/: messages.mo  messages.po
src/gallery_preparator/ui/: console.py
ui/: console.py
