[metadata]
name = gallery-preparator
version = 0.5.0
description = Web gallery preparation helper program
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/grumpa/gallery_preparator
project_urls =
    Bug Tracker = https://github.com/grumpa/gallery_preparator/issues
author = Viktor Matys
author_email = v.matys@grumpa.net
license = BSD 3
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Natural Language :: Czech
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Topic :: Multimedia :: Graphics :: Graphics Conversion
    Topic :: Utilities
keywords = picture, photo, gallery

[options]
package_dir=
    =src
packages=find:
install_requires = pillow
include_package_data = True

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    gallery_preparator = gallery_preparator.gallery_preparator:run

[options.package_data]
* =
    locales/messages.pot
    locales/*/*/*
